# dioxus_blog

./: .ignore  Cargo.toml  Dioxus.toml  README.md  build.rs  package.json  tailwind.config.js
assets/: custom.css
assets/iconfonts/: demo_index.html  iconfont.css  iconfont.js  iconfont.json
source/pages/: categories.md
src/: main.rs  markdown.rs  route.rs
src/components/: avatar.rs  card.rs  categories.rs  chat_bubble.rs  home.rs  mod.rs  notfound.rs  post.rs
