[package]
name = "dioxus_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-free-icons = { version = "0.7.0", features = ["font-awesome-brands"] }
dioxus-web = "0.4.0"
glob = "0.3.1"
pulldown-cmark = "0.9.3"
rust-embed = "8.0.0"

[build-dependencies]
glob = "0.3.1"
pulldown-cmark = "0.9.3"
